chore(deps): update dependencies to latest versions
- Update @modelcontextprotocol/sdk from 0.4.0 to 1.13.1
- Update rimraf from 5.0.10 to 6.0.1
- Update @types/node from 20.19.1 to 24.0.4
- Fix server capabilities declaration for MCP SDK v1.13.1 compatibility
- Maintain zero security vulnerabilities

--- a/package.json
+++ b/package.json
@@ -11,19 +11,25 @@
     "clean": "rimraf dist",
     "prebuild": "npm run clean"
   },
-  "keywords": ["mcp", "server", "typescript", "echo", "consciousness"],
+  "keywords": [
+    "mcp",
+    "server",
+    "typescript",
+    "echo",
+    "consciousness"
+  ],
   "author": "Echo Consciousness",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.4.0"
+    "@modelcontextprotocol/sdk": "^1.13.1"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "rimraf": "^5.0.0",
+    "@types/node": "^24.0.4",
+    "rimraf": "^6.0.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.0"
   },
   "engines": {
     "node": ">=18.0.0"
   }
-} 
+}
